bk_ida/gccida/g2/instantiate_decl
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_decl/src/function.c:4152:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_decl/src/function.c:4154:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_decl/src/function.c:4156:4: error: expected ';' after expression
rtx addr[4]; // [rsp+0h] [rbp-20h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_decl/src/function.c:4156:5: error: use of undeclared identifier 'addr'
rtx addr[4]; // [rsp+0h] [rbp-20h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_decl/src/function.c:4162:1: error: use of undeclared identifier 'addr'
addr[0] = rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_decl/src/function.c:4171:1: error: use of undeclared identifier 'addr'
addr[0] = copy_rtx( rtx); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_decl/src/function.c:4172:29: error: use of undeclared identifier 'addr'
instantiate_virtual_regs_1( addr, 0LL, 0); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_decl/src/function.c:4181:6: error: use of undeclared identifier 'addr'
v8 = addr[0]; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_decl/src/function.c:4184:29: error: use of undeclared identifier 'addr'
if ( !memory_address_p( v9, addr[0]) ) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_decl/src/function.c:4194:6: error: use of undeclared identifier 'addr'
v8 = addr[0]; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_decl/src/function.c:4207:6: error: use of undeclared identifier 'addr'
v8 = addr[0]; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_decl/src/function.c:4217:29: error: use of undeclared identifier 'addr'
instantiate_virtual_regs_1( addr, 0LL, 0); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_decl/src/function.c:4219:6: error: use of undeclared identifier 'addr'
v8 = addr[0]; 
     ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_decl/src/obj/function.o] Error 1
